--- a/css/main.css
+++ b/css/main.css
@@ -276,7 +276,8 @@ html input[disabled] {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+       box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -290,7 +291,6 @@ input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -335,156 +335,316 @@ table {
  * Copyright 2012-2014 thoughtbot, inc.
  * MIT License */
 html {
-  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
-  -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
+@font-face {
+  font-family: 'sans';
+  src: url("../fonts/sans-regular-webfont.eot");
+  src: url("../fonts/sans-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/sans-regular-webfont.woff2") format("woff2"), url("../fonts/sans-regular-webfont.woff") format("woff"), url("../fonts/sans-regular-webfont.ttf") format("truetype"), url("../fonts/sans-regular-webfont.svg#sansregular") format("svg");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'sans';
+  src: url("../fonts/sans-medium-webfont.eot");
+  src: url("../fonts/sans-medium-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/sans-medium-webfont.woff2") format("woff2"), url("../fonts/sans-medium-webfont.woff") format("woff"), url("../fonts/sans-medium-webfont.ttf") format("truetype"), url("../fonts/sans-medium-webfont.svg#sansmedium") format("svg");
+  font-weight: 600;
+  font-style: normal; }
+@font-face {
+  font-family: 'sans';
+  src: url("../fonts/sans-bold-webfont.eot");
+  src: url("../fonts/sans-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/sans-bold-webfont.woff2") format("woff2"), url("../fonts/sans-bold-webfont.woff") format("woff"), url("../fonts/sans-bold-webfont.ttf") format("truetype"), url("../fonts/sans-bold-webfont.svg#sansbold") format("svg");
+  font-weight: 800;
+  font-style: normal; }
+@font-face {
+  font-family: 'serif';
+  src: url("../fonts/serif-regular-webfont.eot");
+  src: url("../fonts/serif-regular-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-regular-webfont.woff2") format("woff2"), url("../fonts/serif-regular-webfont.woff") format("woff"), url("../fonts/serif-regular-webfont.ttf") format("truetype"), url("../fonts/serif-regular-webfont.svg#serifregular") format("svg");
+  font-weight: 400;
+  font-style: normal; }
+@font-face {
+  font-family: 'serif';
+  src: url("../fonts/serif-italic-webfont.eot");
+  src: url("../fonts/serif-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-italic-webfont.woff2") format("woff2"), url("../fonts/serif-italic-webfont.woff") format("woff"), url("../fonts/serif-italic-webfont.ttf") format("truetype"), url("../fonts/serif-italic-webfont.svg#serifitalic") format("svg");
+  font-weight: 400;
+  font-style: italic; }
+@font-face {
+  font-family: 'serif';
+  src: url("../fonts/serif-bold-webfont.eot");
+  src: url("../fonts/serif-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-bold-webfont.woff2") format("woff2"), url("../fonts/serif-bold-webfont.woff") format("woff"), url("../fonts/serif-bold-webfont.ttf") format("truetype"), url("../fonts/serif-bold-webfont.svg#serifbold") format("svg");
+  font-weight: 800;
+  font-style: normal; }
+@font-face {
+  font-family: 'serif';
+  src: url("../fonts/serif-bolditalic-webfont.eot");
+  src: url("../fonts/serif-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-bolditalic-webfont.woff2") format("woff2"), url("../fonts/serif-bolditalic-webfont.woff") format("woff"), url("../fonts/serif-bolditalic-webfont.ttf") format("truetype"), url("../fonts/serif-bolditalic-webfont.svg#serifbold_italic") format("svg");
+  font-weight: 800;
+  font-style: italic; }
 * {
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility; }
+
+img {
+  max-width: 100%;
+  height: auto; }
 
 body {
   color: rgba(0, 0, 0, 0.87);
-  font-size: 16px;
-  line-height: 1.5; }
+  font-size: 80%;
+  line-height: 1.5;
+  font-family: "sans", sans-serif;
+  font-weight: 400; }
+  @media screen and (min-width: 48em) {
+    body {
+      font-size: 100%; } }
 
 section {
-  max-width: 68em;
+  max-width: 100%;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  overflow: auto; }
   section:after {
     content: "";
     display: table;
     clear: both; }
-  section aside {
-    float: left;
-    display: block;
-    margin-right: 2.3576515979%;
-    width: 57.3509785009%;
-    margin-left: 8.5298042998%; }
-    section aside:last-child {
-      margin-right: 0; }
-  section article {
-    float: left;
-    display: block;
-    margin-right: 2.3576515979%;
-    width: 31.7615656014%; }
-    section article:last-child {
-      margin-right: 0; }
-
-img {
-  max-width: 100%;
-  height: auto;
-  margin-bottom: 2rem; }
-
-p {
-  font-family: "Calluna", serif;
-  font-weight: 600; }
-  p.lead {
-    font-size: 50px;
-    line-height: 1;
-    font-weight: 100;
-    clear: both;
-    margin-top: 2rem; }
+  section.main {
+    background: url(../img/featured.png) no-repeat right top fixed;
+    background-size: cover;
+    background-attachment: scroll;
+    padding: 1em; }
+    @media screen and (min-width: 48em) {
+      section.main {
+        padding: 2.3576515979%; } }
+    @media screen and (min-width: 85em) {
+      section.main {
+        background: url(../img/featured-2.png) no-repeat right top fixed;
+        background-size: cover;
+        background-attachment: scroll; } }
+    section.main > div {
+      padding: 1em;
+      /*
+      @include media(48*$base) {
+      	@include pad(default);
+      }
+      */
+      border: 0.25em rgba(0, 0, 0, 0.87) solid;
+      max-width: 25em;
+      float: left;
+      display: block;
+      margin-right: 2.3576515979%;
+      width: 100%; }
+      section.main > div:last-child {
+        margin-right: 0; }
+      @media screen and (min-width: 30em) {
+        section.main > div {
+          float: left;
+          display: block;
+          margin-right: 2.3576515979%;
+          width: 82.9403914003%; }
+          section.main > div:last-child {
+            margin-right: 0; } }
+      @media screen and (min-width: 48em) {
+        section.main > div {
+          float: left;
+          display: block;
+          margin-right: 2.3576515979%;
+          width: 40.2913699012%; }
+          section.main > div:last-child {
+            margin-right: 0; } }
+    section.main p.summary {
+      font-family: "serif", serif;
+      -webkit-font-feature-settings: "liga";
+      -moz-font-feature-settings: "liga";
+      -ms-font-feature-settings: "liga";
+      font-feature-settings: "liga";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 1.5em;
+      color: rgba(0, 0, 0, 0.87);
+      line-height: 1.2;
+      margin: 0.5em 0; }
 
 h1 {
-  font-family: "CircularStd-Bold", "Circular", sans-serif;
-  font-size: 1.75em;
-  font-weight: bold;
-  line-height: 1;
-  letter-spacing: 0.2857em;
-  padding-left: .875rem;
-  padding-right: 0.3375rem;
-  padding-bottom: .5rem;
-  padding-top: .5rem;
-  border: 0.25rem solid rgba(0, 0, 0, 0.87);
-  display: inline-block;
-  text-align: center;
-  box-sizing: border-box; }
+  font-family: "sans", sans-serif;
+  font-weight: 800;
+  font-size: 1.7em;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 1.285;
+  letter-spacing: 0.25em;
+  margin: 0.5em 0 1.5em; }
 
-.box {
-  border: 0.25rem solid rgba(0, 0, 0, 0.87);
-  padding-left: 1rem;
-  padding-right: 1rem;
-  margin-top: 2rem;
-  float: left;
-  margin-bottom: 2rem; }
-  .box h1 {
-    border: none;
-    padding-left: 0;
-    padding-right: 0; }
-  .box .lead {
-    margin: 2rem 0;
-    margin-top: 1rem; }
-  .box .label {
-    font-family: "CircularStd-Book";
-    font-weight: normal;
-    letter-spacing: .5px;
-    font-size: 15px;
-    color: rgba(0, 0, 0, 0.87);
-    line-height: 19px;
-    margin-top: 0;
-    padding-bottom: 0.5rem; }
-
-nav {
-  position: fixed; }
-
-.box.hover {
-  padding: 0;
+form input {
+  appearance: none;
+  border: none;
   margin: 0;
-  width: 8.5rem;
-  height: 3.25rem;
-  background: white;
-  transition: all 0.2s ease; }
-  .box.hover * {
-    transition: all 0.3s ease; }
-  .box.hover h1 {
-    font-family: "CircularStd-Bold", "Circular", sans-serif;
-    font-size: 1.75em;
-    font-weight: bold;
-    line-height: 1;
-    letter-spacing: 0.2857em;
-    padding-left: .875rem;
-    padding-right: 0.3375rem;
-    padding-bottom: .5rem;
-    padding-top: .5rem;
-    display: inline-block;
-    text-align: center;
-    box-sizing: border-box;
-    margin: 0;
-    transition: all 0.3s ease; }
-  .box.hover .label {
+  padding: 0;
+  border-bottom: 2px rgba(0, 0, 0, 0.24) solid;
+  font-family: "sans", sans-serif;
+  font-weight: 800;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.24);
+  line-height: 1.25em;
+  letter-spacing: 0.125em;
+  background: none;
+  text-transform: uppercase;
+  padding-bottom: 0.375em;
+  border-radius: 0;
+  width: 12em; }
+  form input:focus {
+    outline: none;
+    border-bottom: 2px rgba(0, 0, 0, 0.87) solid;
+    color: rgba(0, 0, 0, 0.87); }
+form button {
+  appearance: none;
+  background: none;
+  border: none;
+  padding: 0;
+  padding-top: 0.875em;
+  font-family: "sans", sans-serif;
+  font-weight: 800;
+  font-size: 1em;
+  color: rgba(0, 0, 0, 0.87);
+  line-height: 20px;
+  letter-spacing: 2px;
+  text-transform: uppercase; }
+  form button::after {
+    font-family: "sans", sans-serif;
+    content: "\2192";
+    text-indent: -9999px;
     color: transparent;
-    font-size: 1px;
-    line-height: 0;
-    height: 0px;
-    width: 15rem;
-    transition-delay: .2s;
-    margin: 0;
-    padding: 0;
-    opacity: 0; }
-  .box.hover:hover {
-    border: 0.25rem solid rgba(0, 0, 0, 0.87);
-    width: 16rem;
-    height: 11rem; }
-    .box.hover:hover h1 {
-      margin: 0.67em 0; }
-    .box.hover:hover .label {
-      color: transparent;
+    width: 1em;
+    height: 0.875em;
+    background: url(../img/rarr.svg) center center no-repeat;
+    margin-left: 0.75em; }
+
+.floatlabel {
+  padding-top: 1.5em !important; }
+
+label.label-floatlabel {
+  color: rgba(0, 0, 0, 0.87) !important;
+  font-family: "sans", sans-serif;
+  font-weight: 600;
+  letter-spacing: 0.125em;
+  text-transform: uppercase;
+  left: 0 !important; }
+
+footer.nav {
+  position: relative;
+  margin: 0;
+  width: 100%;
+  overflow: auto; }
+  footer.nav figure {
+    position: relative;
+    float: left;
+    overflow: hidden;
+    /*
+    		min-width: 320px;
+    		max-height: 360px;
+    */
+    width: 100%;
+    background: rgba(0, 0, 0, 0.87);
+    text-align: left;
+    cursor: pointer; }
+    @media screen and (min-width: 30em) {
+      footer.nav figure {
+        width: 50%; } }
+    footer.nav figure img {
+      position: relative;
+      display: block;
+      min-height: 100%;
+      min-width: 100%;
       height: auto;
-      width: auto;
-      display: inline-block;
-      padding-left: .875rem;
-      font-family: "CircularStd-Book";
-      font-weight: normal;
-      letter-spacing: .5px;
-      font-size: 15px;
-      color: rgba(0, 0, 0, 0.87);
-      line-height: 19px;
-      margin-top: 0;
-      padding-bottom: 2rem;
-      opacity: 1; }
+      opacity: 0.54; }
+    footer.nav figure figcaption {
+      padding: 2em;
+      color: black;
+      text-transform: uppercase;
+      font-size: 1.25em;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden; }
+      footer.nav figure figcaption::before, footer.nav figure figcaption::after {
+        pointer-events: none; }
+      footer.nav figure figcaption, footer.nav figure figcaption > a {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%; }
+      footer.nav figure figcaption > a {
+        z-index: 1000;
+        text-indent: 200%;
+        white-space: nowrap;
+        font-size: 0;
+        opacity: 0; }
+    footer.nav figure h2 {
+      font-family: "sans", sans-serif;
+      font-weight: 800;
+      font-size: 20px;
+      color: #FFFFFF;
+      line-height: 25px;
+      letter-spacing: 2px; }
+    footer.nav figure p, footer.nav figure h2 {
+      margin: 0; }
+    footer.nav figure p {
+      letter-spacing: 1px;
+      font-size: 68.5%; }
+
+/*---------------*/
+/***** Duke *****/
+/*---------------*/
+figure.effect-duke {
+  background: black;
+  max-height: 15em; }
+
+figure.effect-duke img,
+figure.effect-duke p {
+  -webkit-transition: opacity 1s, -webkit-transform 0.75s;
+  transition: opacity 1s, transform 0.75s; }
+
+figure.effect-duke img.color {
+  opacity: 0;
+  -webkit-transition: opacity 1s, -webkit-transform 0.75s;
+  transition: opacity 1s, transform 0.75s;
+  -webkit-transform: translateY(-100%);
+  -ms-transform: translateY(-100%);
+      transform: translateY(-100%); }
+
+figure.effect-duke:hover img.bw {
+  opacity: 0;
+  -webkit-transform: scale3d(1.03, 1.03, 1);
+  transform: scale3d(1.03, 1.03, 1); }
+
+figure.effect-duke:hover img.color {
+  opacity: 1;
+  -webkit-transform: scale3d(1.03, 1.03, 1) translateY(-97%);
+  transform: scale3d(1.03, 1.03, 1) translateY(-97%); }
+
+figure.effect-duke h2 {
+  -webkit-transition: color 1s ease-out;
+          transition: color 1s ease-out;
+  color: white; }
+
+figure.effect-duke p {
+  text-transform: none;
+  font-size: 90%;
+  opacity: 0; }
+
+figure.effect-duke:hover h2,
+figure.effect-duke:hover p {
+  opacity: 1;
+  color: black; }
+
+/* Media queries */
+@media screen and (max-width: 50em) {
+  .content {
+    padding: 0 10px; }
+
+  .grid figure {
+    display: inline-block;
+    float: none;
+    margin: 10px auto;
+    width: 100%; } }
