--- a/css/main.css
+++ b/css/main.css
@@ -276,8 +276,7 @@ html input[disabled] {
  */
 input[type="checkbox"],
 input[type="radio"] {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  box-sizing: border-box;
   /* 1 */
   padding: 0;
   /* 2 */ }
@@ -291,6 +290,7 @@ input[type="search"] {
   -webkit-appearance: textfield;
   /* 1 */
   -moz-box-sizing: content-box;
+  -webkit-box-sizing: content-box;
   /* 2 */
   box-sizing: content-box; }
 
@@ -335,10 +335,12 @@ table {
  * Copyright 2012-2014 thoughtbot, inc.
  * MIT License */
 html {
+  -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box; }
 
 *, *:before, *:after {
+  -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit; }
 
@@ -475,51 +477,53 @@ h1 {
   color: rgba(0, 0, 0, 0.87);
   line-height: 1.285;
   letter-spacing: 0.25em;
-  margin: 0.5em 0 1.5em; }
+  margin: 0.7em 0 1.7em; }
 
-form input {
-  appearance: none;
-  border: none;
-  margin: 0;
-  padding: 0;
-  border-bottom: 2px rgba(0, 0, 0, 0.24) solid;
-  font-family: "sans", sans-serif;
-  font-weight: 800;
-  font-size: 1em;
-  color: rgba(0, 0, 0, 0.24);
-  line-height: 1.25em;
-  letter-spacing: 0.125em;
-  background: none;
-  text-transform: uppercase;
-  padding-bottom: 0.375em;
-  border-radius: 0;
-  width: 12em; }
-  form input:focus {
-    outline: none;
-    border-bottom: 2px rgba(0, 0, 0, 0.87) solid;
-    color: rgba(0, 0, 0, 0.87); }
-form button {
-  appearance: none;
-  background: none;
-  border: none;
-  padding: 0;
-  padding-top: 0.875em;
-  font-family: "sans", sans-serif;
-  font-weight: 800;
-  font-size: 1em;
-  color: rgba(0, 0, 0, 0.87);
-  line-height: 20px;
-  letter-spacing: 2px;
-  text-transform: uppercase; }
-  form button::after {
+form {
+  margin-bottom: 1em; }
+  form input {
+    appearance: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    border-bottom: 2px rgba(0, 0, 0, 0.24) solid;
     font-family: "sans", sans-serif;
-    content: "\2192";
-    text-indent: -9999px;
-    color: transparent;
-    width: 1em;
-    height: 0.875em;
-    background: url(../img/rarr.svg) center center no-repeat;
-    margin-left: 0.75em; }
+    font-weight: 800;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.24);
+    line-height: 1.25em;
+    letter-spacing: 0.125em;
+    background: none;
+    text-transform: uppercase;
+    padding-bottom: 0.375em;
+    border-radius: 0;
+    width: 12em; }
+    form input:focus {
+      outline: none;
+      border-bottom: 2px rgba(0, 0, 0, 0.87) solid;
+      color: rgba(0, 0, 0, 0.87); }
+  form button {
+    appearance: none;
+    background: none;
+    border: none;
+    padding: 0;
+    padding-top: 0.875em;
+    font-family: "sans", sans-serif;
+    font-weight: 800;
+    font-size: 1em;
+    color: rgba(0, 0, 0, 0.87);
+    line-height: 20px;
+    letter-spacing: 2px;
+    text-transform: uppercase; }
+    form button::after {
+      font-family: "sans", sans-serif;
+      content: "\2192";
+      text-indent: -9999px;
+      color: transparent;
+      width: 1em;
+      height: 0.875em;
+      background: url(../img/rarr.svg) center center no-repeat;
+      margin-left: 0.75em; }
 
 .floatlabel {
   padding-top: 1.5em !important; }
@@ -610,8 +614,7 @@ figure.effect-duke img.color {
   -webkit-transition: opacity 1s, -webkit-transform 0.75s;
   transition: opacity 1s, transform 0.75s;
   -webkit-transform: translateY(-100%);
-  -ms-transform: translateY(-100%);
-      transform: translateY(-100%); }
+  transform: translateY(-100%); }
 
 figure.effect-duke:hover img.bw {
   opacity: 0;
@@ -624,8 +627,7 @@ figure.effect-duke:hover img.color {
   transform: scale3d(1.03, 1.03, 1) translateY(-97%); }
 
 figure.effect-duke h2 {
-  -webkit-transition: color 1s ease-out;
-          transition: color 1s ease-out;
+  transition: color 1s ease-out;
   color: white; }
 
 figure.effect-duke p {
