--- a/scss/main.scss
+++ b/scss/main.scss
@@ -205,7 +205,14 @@ h1 {
 	color: $black;
 	line-height: 1.285;
 	letter-spacing: .25*$base;
-	margin: 0.7*$base 0 1.7*$base;
+	
+	margin: 0.5em 0 1.3em;
+	
+	@include media(30*$base) {
+		margin: 0.7*$base 0 1.7*$base;
+	}
+		
+	
 }
 
 form {
@@ -259,6 +266,7 @@ form {
 			width: $base;
 			height: .875*$base;
 			background: url(../img/rarr.svg) center center no-repeat;
+			background-size: 100%;
 			margin-left: .75*$base;
 		}
 	}
