--- a/css/main.css
+++ b/css/main.css
@@ -600,8 +600,11 @@ footer.nav {
       font-weight: 800;
       font-size: 1.25em;
       color: #FFFFFF;
-      line-height: 25px;
-      letter-spacing: 2px; }
+      line-height: 0.875em;
+      letter-spacing: 0.125em; }
+      @media screen and (min-width: 26em) {
+        footer.nav figure h2 {
+          line-height: 1.5em; } }
     footer.nav figure p, footer.nav figure h2 {
       margin: 0; }
     footer.nav figure p {
@@ -613,7 +616,11 @@ footer.nav {
 /*---------------*/
 figure.effect-duke {
   background: black;
-  max-height: 15em; }
+  max-height: 15em;
+  min-height: 5em; }
+  @media screen and (min-width: 30em) {
+    figure.effect-duke {
+      min-height: 6.75em; } }
 
 figure.effect-duke img,
 figure.effect-duke p {
