--- a/scss/main.scss
+++ b/scss/main.scss
@@ -235,7 +235,7 @@ form {
 		text-transform: uppercase;
 		padding-bottom: .375*$base;
 		border-radius: 0;
-		width: 11*$base;
+		width: 70%;
 		
 		&:focus {
 			outline: none;
