--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ figure { margin: 0; }
 
 /* ========================================================================== Forms ========================================================================== */
 /** Define consistent border, margin, and padding. */
-fieldset { border: 1px solid #c0c0c0; margin: 0 2px; padding: 0.35em 0.625em 0.75em; }
+fieldset { border: 0; margin: 0; padding: 0; }
 
 /** 1. Correct `color` not being inherited in IE 8/9. 2. Remove padding so people aren't caught out if they zero out fieldsets. */
 legend { border: 0; /* 1 */ padding: 0; /* 2 */ }
@@ -158,12 +158,12 @@ section.main p.summary { font-family: "serif", serif; -webkit-font-feature-setti
 h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color: rgba(0, 0, 0, 0.87); line-height: 1.285; letter-spacing: 0.25em; margin: 0.5em 0 1.3em; }
 @media screen and (min-width: 30em) { h1 { margin: 0.7em 0 1.7em; } }
 
-form { margin-bottom: 1em; }
+form { margin-top: 1.5em; }
 form input { appearance: none; border: none; margin: 0; padding: 0; border-bottom: 2px rgba(0, 0, 0, 0.24) solid; font-family: "sans", sans-serif; font-weight: 600; font-size: 1em; color: rgba(0, 0, 0, 0.24); line-height: 1.25em; letter-spacing: 0.0625em; background: none; text-transform: uppercase; padding-bottom: 0.375em; border-radius: 0; width: 70%; }
 form input:focus { outline: none; border-bottom: 2px rgba(0, 0, 0, 0.87) solid; color: rgba(0, 0, 0, 0.87); }
-form button { appearance: none; background: none; border: none; padding: 0; padding-top: 0.875em; font-family: "sans", sans-serif; font-weight: 800; font-size: 1em; color: rgba(0, 0, 0, 0.87); line-height: 20px; letter-spacing: 0.0625em; text-transform: uppercase; }
-form button:focus { outline: none; border: none; color: rgba(0, 0, 0, 0.54); }
-form button::after { font-family: "sans", sans-serif; content: "\2192"; text-indent: -9999px; color: transparent; width: 1em; height: 0.875em; background: url(../img/rarr.svg) center center no-repeat; background-size: 100%; margin-left: 0.75em; }
+form button, form input.button { appearance: none; background: none; border: none; padding: 0; padding-top: 0.875em; font-family: "sans", sans-serif; font-weight: 800; font-size: 1em; color: rgba(0, 0, 0, 0.87); line-height: 20px; letter-spacing: 0.0625em; text-transform: uppercase; text-align: left; }
+form button:focus, form input.button:focus { outline: none; border: none; color: rgba(0, 0, 0, 0.54); }
+form button::after, form input.button::after { font-family: "sans", sans-serif; content: "\2192"; text-indent: -9999px; color: transparent; width: 1em; height: 0.875em; background: url(../img/rarr.svg) center center no-repeat; background-size: 100%; margin-left: 0.75em; }
 
 .floatlabel { padding-top: 1.5em !important; }
 
