--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,10 @@ html { -moz-box-sizing: border-box; box-sizing: border-box; }
 @font-face { font-family: 'serif'; src: url("../fonts/serif-italic-webfont.eot"); src: url("../fonts/serif-italic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-italic-webfont.woff2") format("woff2"), url("../fonts/serif-italic-webfont.woff") format("woff"), url("../fonts/serif-italic-webfont.ttf") format("truetype"), url("../fonts/serif-italic-webfont.svg#serifitalic") format("svg"); font-weight: 400; font-style: italic; }
 @font-face { font-family: 'serif'; src: url("../fonts/serif-bold-webfont.eot"); src: url("../fonts/serif-bold-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-bold-webfont.woff2") format("woff2"), url("../fonts/serif-bold-webfont.woff") format("woff"), url("../fonts/serif-bold-webfont.ttf") format("truetype"), url("../fonts/serif-bold-webfont.svg#serifbold") format("svg"); font-weight: 800; font-style: normal; }
 @font-face { font-family: 'serif'; src: url("../fonts/serif-bolditalic-webfont.eot"); src: url("../fonts/serif-bolditalic-webfont.eot?#iefix") format("embedded-opentype"), url("../fonts/serif-bolditalic-webfont.woff2") format("woff2"), url("../fonts/serif-bolditalic-webfont.woff") format("woff"), url("../fonts/serif-bolditalic-webfont.ttf") format("truetype"), url("../fonts/serif-bolditalic-webfont.svg#serifbold_italic") format("svg"); font-weight: 800; font-style: italic; }
+html { -moz-box-sizing: border-box; box-sizing: border-box; }
+
+*, *:before, *:after { -moz-box-sizing: inherit; box-sizing: inherit; }
+
 * { -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; }
 
 img { max-width: 100%; height: auto; }
@@ -140,14 +144,16 @@ body { color: rgba(0, 0, 0, 0.87); font-size: 80%; line-height: 1.5; font-family
 
 section { max-width: 100%; margin-left: auto; margin-right: auto; overflow: auto; }
 section:after { content: ""; display: table; clear: both; }
-section.main { background: url(../img/featured.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; padding: 1em; }
+section.main.home { background: url(../img/featured.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; }
+@media screen and (min-width: 85em) { section.main.home { background: url(../img/featured-2.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; } }
+section.main.home > div { border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 25em; }
+section.main { padding: 1em; }
 @media screen and (min-width: 48em) { section.main { padding: 2.3576515979%; } }
-@media screen and (min-width: 85em) { section.main { background: url(../img/featured-2.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; } }
 section.main > div { padding: 1em; /*
 @include media(48*$base) {
 	@include pad(default);
 }
-*/ border: 0.25em rgba(0, 0, 0, 0.87) solid; max-width: 25em; float: left; display: block; margin-right: 2.3576515979%; width: 100%; }
+*/ float: left; display: block; margin-right: 2.3576515979%; width: 100%; }
 section.main > div:last-child { margin-right: 0; }
 @media screen and (min-width: 30em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 82.9403914003%; }
   section.main > div:last-child { margin-right: 0; } }
