--- a/scss/main.scss
+++ b/scss/main.scss
@@ -170,6 +170,16 @@ header {
 			display: inline-block;
 			padding-bottom: none;
 
+
+// CONVERT FOLLOWING TO EMS
+
+border: 3px solid black;
+padding: 5px 7px 5px 10px;
+margin-left: -13px;
+margin-top: 6px;
+
+
+
 			a {
 				color: $black;
 				text-decoration: none;
