--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,7 @@ img { max-width: 100%; height: auto; }
 
 body { color: rgba(0, 0, 0, 0.87); font-size: 80%; line-height: 1.5; font-family: "sans", sans-serif; font-weight: 400; -webkit-transition: all 0.3s ease; transition: all 0.3s ease; }
 @media screen and (min-width: 36em) { body { font-size: 90%; } }
-@media screen and (min-width: 80em) { body { font-size: 100%; } }
+@media screen and (min-width: 85em) { body { font-size: 100%; } }
 @media screen and (min-width: 100em) { body { font-size: 110%; } }
 @media screen and (min-width: 120em) { body { font-size: 125%; } }
 
@@ -156,20 +156,24 @@ section { max-width: 100%; margin-left: auto; margin-right: auto; overflow: auto
 section:after { content: ""; display: table; clear: both; }
 section.main.home { background: url(../img/featured.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; }
 @media screen and (min-width: 85em) { section.main.home { background: url(../img/featured-2.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; } }
-section.main.home > div { border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 25em; }
+section.main.home > div { border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 30em; }
 section.main { padding: 1em; }
 @media screen and (min-width: 48em) { section.main { padding: 2.3576515979%; } }
-section.main > div { padding: 1em; /*
+section.main > div { padding: 1em 3em 1em 1em; /*
 @include media(48*$base) {
 	@include pad(default);
 }
-*/ float: left; display: block; margin-right: 2.3576515979%; width: 100%; }
+*/ float: left; display: block; margin-right: 2.3576515979%; width: 100%; -webkit-transform: all 0.3s ease; -ms-transform: all 0.3s ease; transform: all 0.3s ease; }
 section.main > div:last-child { margin-right: 0; }
 @media screen and (min-width: 30em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 82.9403914003%; }
   section.main > div:last-child { margin-right: 0; } }
-@media screen and (min-width: 50em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 40.2913699012%; }
+@media screen and (min-width: 35em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 65.8807828007%; }
   section.main > div:last-child { margin-right: 0; } }
-section.main p.summary { font-family: "serif", serif; -webkit-font-feature-settings: "liga"; -moz-font-feature-settings: "liga"; -ms-font-feature-settings: "liga"; font-feature-settings: "liga"; font-style: normal; font-weight: 400; font-size: 1.2em; line-height: 1.22; color: rgba(0, 0, 0, 0.87); line-height: 1.2; margin: 0.5em 0; }
+@media screen and (min-width: 45em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 48.821174201%; }
+  section.main > div:last-child { margin-right: 0; } }
+@media screen and (min-width: 60em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 40.2913699012%; }
+  section.main > div:last-child { margin-right: 0; } }
+section.main p.summary { font-family: "serif", serif; -webkit-font-feature-settings: "liga"; -moz-font-feature-settings: "liga"; -ms-font-feature-settings: "liga"; font-feature-settings: "liga"; font-style: normal; font-weight: 400; font-size: 1.2em; line-height: 1.4; color: rgba(0, 0, 0, 0.87); line-height: 1.2; margin: 0.5em 0; }
 
 h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color: rgba(0, 0, 0, 0.87); line-height: 1.285; letter-spacing: 0.25em; /* 	margin: 0.5em 0 1.3em; */ /* 	@include media(30*$base) {
 		margin: 0.7*$base 0 1.7*$base;
@@ -184,6 +188,7 @@ form input:focus { outline: none; border-bottom: 2px rgba(0, 0, 0, 0.87) solid; 
 form button, form input.button { appearance: none; background: none; border: none; padding: 0; padding-top: 0.875em; font-family: "sans", sans-serif; font-weight: 800; font-size: 1em; color: rgba(0, 0, 0, 0.87); line-height: 20px; letter-spacing: 0.0625em; text-transform: uppercase; text-align: left; }
 form button:focus, form input.button:focus { outline: none; border: none; color: rgba(0, 0, 0, 0.54); }
 form button::after, form input.button::after { font-family: "sans", sans-serif; content: "\2192"; text-indent: -9999px; color: transparent; width: 1em; height: 0.875em; background: url(../img/rarr.svg) center center no-repeat; background-size: 100%; margin-left: 0.75em; }
+form #signup-response { display: none; padding: 0; padding-top: 0.875em; font-family: "sans", sans-serif; font-weight: 800; font-size: 1em; color: rgba(0, 0, 0, 0.87); line-height: 20px; letter-spacing: 0.0625em; text-transform: uppercase; text-align: left; margin: 0; }
 
 .floatlabel { padding-top: 1.5em !important; }
 
