--- a/css/main.css
+++ b/css/main.css
@@ -138,7 +138,8 @@ img { max-width: 100%; height: auto; }
 
 h2 { font-size: 1.2em; }
 
-h3 { font-size: 1.2em; font-family: "serif", serif; line-height: 1; display: inline-block; border-bottom: solid 1px black; }
+h3 { font-size: 1.2em; font-family: "serif", serif; line-height: 1; display: inline-block; }
+h3 span { border-bottom: solid 1px black; }
 
 body { color: rgba(0, 0, 0, 0.87); font-size: 80%; line-height: 1.5; font-family: "sans", sans-serif; font-weight: 400; -webkit-transition: all 0.3s ease; transition: all 0.3s ease; }
 @media screen and (min-width: 36em) { body { font-size: 90%; } }
@@ -163,20 +164,31 @@ section.main.home { background: url(../img/featured.png) no-repeat right top fix
 section.main.home > div { border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 30em; }
 section.main { padding: 1em; }
 @media screen and (min-width: 48em) { section.main { padding: 2.3576515979%; } }
-section.main > div { padding: 1em 3em 1em 1em; /*
-@include media(48*$base) {
-	@include pad(default);
-}
-*/ float: left; display: block; margin-right: 2.3576515979%; width: 100%; -webkit-transform: all 0.3s ease; -ms-transform: all 0.3s ease; transform: all 0.3s ease; }
-section.main > div:last-child { margin-right: 0; }
-@media screen and (min-width: 30em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 82.9403914003%; }
-  section.main > div:last-child { margin-right: 0; } }
-@media screen and (min-width: 35em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 65.8807828007%; }
-  section.main > div:last-child { margin-right: 0; } }
-@media screen and (min-width: 45em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 48.821174201%; }
-  section.main > div:last-child { margin-right: 0; } }
-@media screen and (min-width: 60em) { section.main > div { float: left; display: block; margin-right: 2.3576515979%; width: 40.2913699012%; }
-  section.main > div:last-child { margin-right: 0; } }
+section.main > div h2, section.main > div h3, section.main > div .copy { padding: 0 1rem; }
+section.main > div div.copy { margin-bottom: 4em; }
+@media screen and (min-width: 35em) { section.main > div div.copy { -webkit-column-count: 2; -moz-column-count: 2; column-count: 2; -webkit-column-gap: 2em; -moz-column-gap: 2em; column-gap: 2em; } }
+@media screen and (min-width: 65em) { section.main > div div.copy { -webkit-column-count: 1; -moz-column-count: 1; column-count: 1; float: left; display: block; margin-right: 2.3576515979%; width: 31.7615656014%; float: none; }
+  section.main > div div.copy:last-child { margin-right: 0; } }
+@media screen and (min-width: 65em) { section.main > div img { float: left; display: block; margin-right: 2.3576515979%; width: 65.8807828007%; margin-right: 0; float: right; }
+  section.main > div img:last-child { margin-right: 0; } }
+section.main > div p { float: left; display: block; margin-right: 2.3576515979%; width: 100%; display: block; float: none; -webkit-transform: all 0.3s ease; -ms-transform: all 0.3s ease; transform: all 0.3s ease; /*
+				@include media(30*$base) {
+					@include span-columns(10);
+					float: none;
+				}
+	
+				@include media(35*$base) {
+					@include span-columns(8);
+					float: none;
+				}
+	
+				
+				@include media(60*$base) {
+					@include span-columns(5);
+					float: none;
+				}
+*/ }
+section.main > div p:last-child { margin-right: 0; }
 section.main p.summary { font-family: "serif", serif; -webkit-font-feature-settings: "liga"; -moz-font-feature-settings: "liga"; -ms-font-feature-settings: "liga"; font-feature-settings: "liga"; font-style: normal; font-weight: 400; font-size: 1.2em; line-height: 1.4; color: rgba(0, 0, 0, 0.87); line-height: 1.2; margin: 0.5em 0; }
 
 h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color: rgba(0, 0, 0, 0.87); line-height: 1.285; letter-spacing: 0.25em; /* 	margin: 0.5em 0 1.3em; */ /* 	@include media(30*$base) {
