--- a/css/main.css
+++ b/css/main.css
@@ -159,13 +159,11 @@ header nav ul li a { text-decoration: none; color: rgba(0, 0, 0, 0.87); }
 
 section { max-width: 100%; margin-left: auto; margin-right: auto; overflow: auto; }
 section:after { content: ""; display: table; clear: both; }
-section.main.home { background: url(../img/featured.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; }
-@media screen and (min-width: 85em) { section.main.home { background: url(../img/featured-2.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; } }
-section.main.home > div { border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 30em; }
 section.main { padding: 1em; }
 @media screen and (min-width: 48em) { section.main { padding: 2.3576515979%; } }
 section.main > div h2, section.main > div h3, section.main > div .copy { padding: 0 1rem; }
-section.main > div div.copy { margin-bottom: 4em; }
+section.main > div div.copy { margin-top: 2em; margin-bottom: 6em; }
+@media screen and (min-width: 65em) { section.main > div div.copy { margin-top: 0; } }
 @media screen and (min-width: 35em) { section.main > div div.copy { -webkit-column-count: 2; -moz-column-count: 2; column-count: 2; -webkit-column-gap: 2em; -moz-column-gap: 2em; column-gap: 2em; } }
 @media screen and (min-width: 65em) { section.main > div div.copy { -webkit-column-count: 1; -moz-column-count: 1; column-count: 1; float: left; display: block; margin-right: 2.3576515979%; width: 31.7615656014%; float: none; }
   section.main > div div.copy:last-child { margin-right: 0; } }
@@ -190,6 +188,9 @@ section.main > div p { float: left; display: block; margin-right: 2.3576515979%;
 */ }
 section.main > div p:last-child { margin-right: 0; }
 section.main p.summary { font-family: "serif", serif; -webkit-font-feature-settings: "liga"; -moz-font-feature-settings: "liga"; -ms-font-feature-settings: "liga"; font-feature-settings: "liga"; font-style: normal; font-weight: 400; font-size: 1.2em; line-height: 1.4; color: rgba(0, 0, 0, 0.87); line-height: 1.2; margin: 0.5em 0; }
+section.main.home { background: url(../img/featured.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; }
+@media screen and (min-width: 85em) { section.main.home { background: url(../img/featured-2.png) no-repeat right top fixed; background-size: cover; background-attachment: scroll; } }
+section.main.home > div { padding: 1em 3em 1em 1em; border: 0.25em rgba(0, 0, 0, 0.87) solid; margin: -0.25em; max-width: 30em; }
 
 h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color: rgba(0, 0, 0, 0.87); line-height: 1.285; letter-spacing: 0.25em; /* 	margin: 0.5em 0 1.3em; */ /* 	@include media(30*$base) {
 		margin: 0.7*$base 0 1.7*$base;
@@ -197,6 +198,8 @@ h1 { font-family: "sans", sans-serif; font-weight: 800; font-size: 1.5em; color:
 
 .home h1 { margin: 0.5em 0 1.3em; }
 @media screen and (min-width: 30em) { .home h1 { margin: 0.7em 0 1.7em; } }
+
+@media screen and (min-width: 65em) { .philosophy img { -webkit-transform: translateY(-4em); -ms-transform: translateY(-4em); transform: translateY(-4em); } }
 
 form { margin-top: 1.5em; }
 form input { appearance: none; border: none; margin: 0; padding: 0; border-bottom: 2px rgba(0, 0, 0, 0.24) solid; font-family: "sans", sans-serif; font-weight: 600; font-size: 1em; color: rgba(0, 0, 0, 0.24); line-height: 1.25em; letter-spacing: 0.0625em; background: none; text-transform: uppercase; padding-bottom: 0.375em; border-radius: 0; width: 70%; }
